Update service alias search